Apply correct flex and overflow for multiple selected combatants

--- a/lesscss/components/statblock.less
+++ b/lesscss/components/statblock.less
@@ -42,6 +42,14 @@
   flex: 1;
 }
 
+.c-multiple-combatant-details {
+  flex: 1;
+  overflow-y: auto;
+  .c-combatant-details {
+    flex: 1 0 auto;
+  }
+}
+
 .c-statblock-header {
   .Name {
     font-size: @font-size-h3;
